@@ -4,6 +4,8 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Updated xPDO to revision 329.
+- Improvements to sendError() behavior.
 - Added lock stealing processor and updated remove_locks processor.
 - Added steal_lock:true policy attribute to default Resource policy to allow lock stealing permissions by ResourceGroup.
 - modTemplateVar: Fix getValue() on `value` field by storing and verifying the value requested is cached by the same resource.
